Services/ServiceC/Yaml/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicec
  namespace: sample-namespace
  labels:
    app: servicec
    service: servicec
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: servicec
